# pos-battleship

./: CMakeLists.txt  README.md  board.c  board.h  main.c  player.c  player.h
client/: CMakeLists.txt  client.c  client.h
server/: CMakeLists.txt  bot_board.c  bot_board.h  server.c  server.h
source/: board  board.c  board.h  game_logic.c  ipc.c  main.c  menu.c  menu.h  message.h  utils.c  utils.h
